# mini-twitter

./: .gitignore  Cargo.toml  README.md
twitter-rdb/: Cargo.toml
twitter-rdb/dataset/: follows_sample.csv  tweets_sample.csv
twitter-rdb/src/: api.rs  auth.rs  main.rs  main.rs.save  sql.rs
twitter-rdb/src/constants/: mod.rs  sql.rs
twitter-rdb/src/errors/: err.rs
twitter-rdb/src/macros/: db.rs  mod.rs  repo.rs  tx.rs
twitter-rdb/src/misc/: t.rs
twitter-rdb/src/models/: database.rs  document.rs  events.rs  follows.rs  mod.rs  tweet.rs  tx.rs  user.rs  value.rs
twitter-rdb/src/queries/: batch_insert_tweets.sql  create_indices.sql  create_table.sql  create_table_follows.sql  create_table_tweets.sql  create_user_table.sql  insert_follow.sql  insert_tweet.sql  insert_user.sql  select_all_user.sql  select_random_followee.sql  select_user_followees.sql  select_user_followers.sql  select_user_recent_tweets.sql  select_user_timeline.sql  select_user_tweets.sql
twitter-rdb/src/repo/: mod.rs  twitter.rs  users.rs
twitter-rdb/src/storage/: config.rs  db.rs  ds.rs  mod.rs  tx.rs
twitter-rdb/src/storage/kvs/: mod.rs
twitter-rdb/src/storage/kvs/redis_/: mod.rs  tx.rs  ty.rs
twitter-rdb/src/storage/rdb/: mod.rs
twitter-rdb/src/storage/rdb/pgdb/: mod.rs  tx.rs  ty.rs
twitter-rdb/src/storage/rdb/postgres_/: mod.rs  (+1 more)
twitter-rdb/src/storage/sql/: adapter.rs  mod.rs  pgdb.rs
twitter-rdb/src/structures/: document.rs  events.rs  keyword.rs  mod.rs  tx.rs  value.rs
twitter-rdb/src/utils/: benchmark.rs  csv_util.rs  file.rs  math_util.rs  mod.rs  str_util.rs
(+29 files in other folders)
